Refactor reactv: added deep Proxy reactivity, useState/useEffect hooks, conditional rendering, event bus (emit/on), virtual DOM fragment support, scoped styles, context API, lifecycle hooks, devtools logging, state persistence, and functional component definition

--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "webpack": "^5.92.1"
+  },
+  "devDependencies": {
+    "webpack-cli": "^5.1.4"
   }
 }
