Extend reactv with deep Proxy reactivity, useState/useEffect hooks, conditional rendering, event bus, scoped styles, context API, lifecycle hooks, virtual DOM fragments, state persistence, and functional component support. Updated demo to include persistent counter and event-driven logger.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "babel-loader": "^10.0.0",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "webpack": "^5.92.1"
